# ffmpeg-webcam-rtmp-stream

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.alpine.static  Dockerfile.ubuntu.static  LICENSE  Makefile  README.md
include/: stream.h
libs/: CMakeLists.txt
src/: stream.c
